--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,7 +36,7 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.url="jdbc:mysql://localhost/sic_funcionarios"
+db.default.url="jdbc:mysql://localhost/sic"
 db.default.driver=com.mysql.jdbc.Driver
 db.default.user=root
 db.default.password="root"
@@ -47,7 +47,7 @@ db.default.password="root"
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# evolutionplugin=disabled
+evolutionplugin=disabled
 
 # Ebean configuration
 # ~~~~~
